# CppCompGeom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: point.h
src/: Main  Main.cpp  point.cpp
test/: test.cpp
